@@ -104,7 +104,6 @@ class game_lua_kernel : public lua_kernel_base
 	int impl_game_config_get(lua_State *L);
 	int impl_game_config_set(lua_State *L);
 	int impl_current_get(lua_State *L);
-	int intf_check_end_level_disabled(lua_State *L);
 	int intf_clear_messages(lua_State*);
 	int intf_end_level(lua_State*);
 	int impl_end_level_data_set(lua_State*);
